# IT-Support-Agent

./: CLAUDE.md  README.md  agent.mermaid  pyproject.toml  ticket_27421_password_reset.md  to-be.mermaid  uipath.json  web_search_examples.md  workflow.py
src/config/: assets_loader.py  config.py  prompts.py  validation.py
src/graph/: state.py
src/integrations/: confluence_memory.py  uipath_context_grounding.py  uipath_fetch_articles.py  uipath_get_job_data.py  uipath_storage_bucket.py  web_search.py
src/models/: __init__.py  evaluation_models.py
src/nodes/: augment_knowledge.py  check_it_actions.py  check_missing_information.py  evaluate_knowledge_sufficiency.py  evaluate_response.py  extract_it_action_data.py  extract_web_search_topics.py  generate_ticket_response.py  get_ticket_info.py  knowledge_search.py  package_output.py  search_memory.py  web_search_node.py
src/ticket_resolution_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: article_cache.py  article_search.py  exceptions.py  keyword_extraction.py  llm_service.py  prompt_utils.py
src/workflows/: __init__.py  web_search_resolution.py
