[project]
name = "ticket-resolution-agent"
version = "0.0.30"
description = "ticket-resolution-agent"
authors = [{ name = "Daniela Rosenstein", email = "daniela.rosenstein@catonetworks.com" }]
requires-python = ">=3.10,<4.0"

dependencies = [
    "langchain==0.3.27",
    "langchain-anthropic>=0.3.8",
    "langchain-aws>=0.2.29",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langgraph>=0.2.0",
    "boto3>=1.28.0",
    "uipath-langchain>=0.0.106",
]
